Fix naming inconsistencies